<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudiesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/studiesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/studiesTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/al_malar" />


            <TextView
                android:id="@+id/studentNameForTeacher"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/denemeTeacherButton"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/denemeler"
                        android:textSize="15sp"
                        app:icon="@drawable/ic_baseline_book_24" />

                    <Button
                        android:id="@+id/gorevTeacherButton"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/g_revler"
                        android:textSize="15sp"
                        app:icon="@drawable/ic_baseline_bookmark_24" />

                    <Button
                        android:id="@+id/hedefTeacherButton"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/haftal_k_hedefler"
                        android:textSize="15sp"
                        app:icon="@drawable/ic_baseline_outlined_flag_24" />

                    <Button
                        android:id="@+id/tamamlananKonular"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/konular"
                        android:textSize="15sp"
                        app:icon="@drawable/baseline_timeline_24" />

                    <Button
                        android:id="@+id/excelStudentButton"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/excel_tablosu_olu_tur"
                        app:icon="@drawable/baseline_upload_file_24">

                    </Button>

                    <Button
                        android:id="@+id/dersProgramiTeacherButton"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/ders_program"
                        android:textSize="15sp"
                        app:icon="@drawable/baseline_table_chart_24" />

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/zamanAraligiTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/zaman_aral" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toplam" />

                <TextView
                    android:id="@+id/toplamSureText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="" />

                <TextView
                    android:id="@+id/toplamSoruText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/starScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </HorizontalScrollView>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStudies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/studiesCard">

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>